# moksha

./: .gitlab-ci.yml  0.bootstrap.js  404.html  CNAME  Cargo.toml  LICENSE_MIT  README.md  _Cargo.toml  bootstrap.js  index.html  mksha  moksha  style.css
.github/workflows/: main.yml
data/: credits
data/img/: editor.png.REMOVED.git-id  flight.png.REMOVED.git-id
moksha/: Cargo.toml
moksha/src/: color.rs  controller.rs  dom_factory.rs  events.rs  lib.rs  mesh.rs  node_macro.rs  start.rs
moksha/src/editor/: gizmo.rs  mod.rs  scene_tree.rs  toolbar.rs
moksha/src/renderer/: mod.rs  shader.rs
moksha/src/renderer/shaders/: color.frag  cube.vert
moksha/src/scene/: _object.rs  light.rs  mod.rs  node.rs  object.rs  primitives.rs  storage.rs
moksha/www/: index.js  package-lock.json  package.json
moksha_derive/: Cargo.toml
moksha_derive/src/: lib.rs
moksha_new/moksha/: Cargo.toml
moksha_new/moksha/src/: lib.rs  log_macro.rs  mesh.rs  render.rs  scene.rs  storage.rs
src/: 2  controller.rs  dom_factory.rs  events.rs  factory.rs  game.rs  lib.rs  log_macro.rs  log_macros.rs  mesh.rs  node_macro.rs  renderer.rs  start.rs  style.css  universe.rs
src/assets/img/: earth.jpg.REMOVED.git-id  icon_lg.png.REMOVED.git-id
src/editor/: console.rs  editor.rs  fps.rs  gizmo.rs  mod.rs  scene_tree.rs  toolbar.rs
src/renderer/: mod.rs  renderer.rs  shader.rs
src/renderer/shaders/: color.frag  color.fs  color.vert  color.vs  color_wire.frag  color_wire.vert  cube.frag  simple.frag  simple.vs  wire.frag  wire.fs  wire.vert  wire.vs
src/scene/: factory.rs  mod.rs  node.rs  primitives.rs  scene.rs  storage.rs
tests/: web.rs
www/: LICENSE-MIT  index.html  index.js  package-lock.json  package-lock.json.REMOVED.git-id  package.json  style.css  webpack.config.js
www/public/: 0.bootstrap.js  1.bootstrap.js  bootstrap.js
