[package]
name = "moksha"
version = "0.1.0"
authors = ["nrayamajhee <nishan@rayamajhee.com>"]
description = "An experimental video game engine for the web."
repository="https://gitlab.com/nrayamajhee/moksha-webgl"
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
js-sys = "0.3.23"
maud = "0.20.0"
serde = "1.0.103"
serde_derive = "1.0.103"
nalgebra = "0.18.0"
ncollide3d = "0.20.1"
genmesh = "0.6.2"
strum = "0.15.0"
strum_macros = "0.15.0"
wavefront_obj = "7.0.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

[dependencies.wasm-bindgen]
version = "0.2.46"
features = ["serde-serialize"]


[dependencies.web-sys]
version = "0.3.30"
features = [
  'console',
  'Window',
  'Document',
  'Element',
  'Node',
  'NodeList',
  'DomTokenList',
  'KeyboardEvent',
  'HtmlElement',
  'HtmlHeadElement',
  'HtmlInputElement',
  'HtmlCollection',
  'HtmlCanvasElement',
  'HtmlImageElement',
  'WebGlBuffer',
  'WebGl2RenderingContext',
  'WebGlUniformLocation',
  'WebGlProgram',
  'WebGlShader',
  'File',
  'Blob',
  'Url',
  'FileList',
  'FileReader',
  'WebGlTexture',
  'WebGlVertexArrayObject',
  'MouseEvent',
  'ProgressEvent',
  'Performance',
  'EventTarget',
  'DragEvent',
  'DataTransfer',
  'Event',
  'WheelEvent',
  'PopStateEvent',
  'Location',
  'History',
  'Storage',
  'CssStyleDeclaration'
]

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

